First example with SenejaCS

--- a/Case01/package.json
+++ b/Case01/package.json
@@ -4,6 +4,7 @@
   "description": "A first test with SenecaJS",
   "main": "server.js",
   "dependencies": {
+    "seneca": "^0.5.21"
   },
   "devDependencies": {},
   "scripts": {
