--- a/case02/package.json
+++ b/case02/package.json
@@ -4,7 +4,7 @@
   "description": "SenecaJS with functionality split in servers",
   "main": "server.js",
   "dependencies": {
-    "connect": "^3.3.3",
+    "connect": "2.8",
     "seneca": "^0.5.21"
   },
   "devDependencies": {},
